implementing gap to optimise space complexity

--- a/a2/makefile
+++ b/a2/makefile
@@ -1,8 +1,16 @@
-all: bwtdecode
+all: bwtdecode fileio
+
+fileio: fileio.o
+	g++ fileio.o -o fileio
+
+fileio.o: fileio.cpp
+	g++ -c fileio.cpp
+
 bwtdecode: bwtdecode.o
 	g++ -O3 bwtdecode.o -o bwtdecode
 
 bwtdecode.o: bwtdecode.cpp
 	g++ -c bwtdecode.cpp
 clean:
-	rm -f *.o *.out *.output bwtdecode
+	rm -f *.o *.out *.output bwtdecode memory.txt
+	 
