--- a/a2/.vscode/settings.json
+++ b/a2/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
     "files.associations": {
         "*.source": "sql",
-        "string": "cpp"
+        "string": "cpp",
+        "array": "cpp",
+        "string_view": "cpp",
+        "initializer_list": "cpp",
+        "utility": "cpp",
+        "iostream": "cpp",
+        "chrono": "cpp"
     }
 }
